2016-06-10  Alexander Monakov  <amonakov@ispras.ru>

	* match.pd (-1 / B < A): Use :c to avoid pattern duplication.

2016-06-10  Maxim Ostapenko  <m.ostapenko@samsung.com>

	PR sanitizer/71480
	* varasm.c (place_block_symbol): Adjust alignment for asan protected
	STRING_CSTs even if TREE_CONSTANT_POOL_ADDRESS_P.

2016-06-10  Jan Hubicka  <hubicka@ucw.cz>

	* profile.c: Include cfgloop.h.
	(branch_prob): Compute estimated number of iterations.
	* tree-ssa-loop-niter.c (estimate_numbers_of_iterations_loop): Do not
	recompute estimate number of iterations from profile.

2016-06-10  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR inline-asm/68843
	* reg-stack.c (check_asm_stack_operands): Explicit input arguments
	must be grouped on top of stack.  Don't force early clobber
	on ordinary reg outputs.

2016-06-10  Richard Biener  <rguenther@suse.de>

	* targhooks.c (default_builtin_vectorization_cost): Adjust
	vec_construct cost.

2016-06-10  Richard Biener  <rguenther@suse.de>

	* gimple-fold.c (gimple_fold_builtin_memory_op): Make sure
	to fold the RHS to a constant if possible.

2016-06-10  Thomas Schwinge  <thomas@codesourcery.com>

	PR middle-end/71373
	* tree-nested.c (convert_nonlocal_omp_clauses)
	(convert_local_omp_clauses): Handle OMP_CLAUSE_ASYNC,
	OMP_CLAUSE_WAIT, OMP_CLAUSE_INDEPENDENT, OMP_CLAUSE_AUTO,
	OMP_CLAUSE__CACHE_, OMP_CLAUSE_TILE.

	* gimplify.c (gimplify_adjust_omp_clauses): Discard
	OMP_CLAUSE_TILE.
	* omp-low.c (scan_sharing_clauses): Don't expect OMP_CLAUSE_TILE.

	* omp-low.c (scan_sharing_clauses): Don't expect
	OMP_CLAUSE__CACHE_.

2016-06-10  Alan Hayward  <alan.hayward@arm.com>

	PR tree-optimization/71407
	PR tree-optimization/71416
	* tree-vect-loop.c (vectorizable_live_operation): Use vectype for
	BIT_FIELD_REF type.

2016-06-10  Richard Biener  <rguenther@suse.de>

	PR middle-end/71477
	* cfgloop.c (alloc_loop): Initialize nb_iterations_likely_upper_bound.

2016-06-09  Eric Botcazou  <ebotcazou@adacore.com>
