@@ -48,6 +48,7 @@ selftest::run_tests ()
   vec_c_tests ();
   pretty_print_c_tests ();
   wide_int_cc_tests ();
+  ggc_tests_c_tests ();
 
   /* Mid-level data structures.  */
   input_c_tests ();
